--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "smartchat",
-  "version": "1.0.0",
-  "description": "Mini chat self-hosted (Express + WebSocket + SQLite).",
-  "main": "server.js",
-  "type": "commonjs",
+  "name": "smartcreator-chat",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "better-sqlite3": "^11.5.0",
+    "better-sqlite3": "^9.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
     "ws": "^8.18.0"
   }
 }
