--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "smartcreator-chat",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "better-sqlite3": "^9.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "sqlite": "^5.1.6",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.0"
   }
 }
