--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
-    "sqlite": "^5.1.6",
+    "sqlite": "5.1.1",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.0"
   }
