--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "smartcreator-chat-server",
-  "version": "1.0.0",
-  "description": "Chat + Voice signaling server (Express + ws) cu persistenta in Supabase",
-  "main": "server.js",
+  "name": "smartcreator-chat",
+  "private": true,
   "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ws": "^8.18.0"
   }
