--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "vapid-keys": "node -e \"const webpush=require('web-push');console.log(webpush.generateVAPIDKeys())\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "web-push": "^3.6.7"
   }
 }
