--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.0",
     "express": "^4.19.2",
     "ws": "^8.18.0",
     "web-push": "^3.6.7"
